--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="net.nrask.redditvoid.ui.activities.ContentPreviewActivity"
+            android:name="net.nrask.redditvoid.ui.activities.SubmissionDetailsActivity"
             android:theme="@style/Void.Translucent.Preview">
         </activity>
         <activity
