--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile project(':srjneeds')
+    compile "com.github.sebastianrask:srjneeds:85306c8"
 
     compile "com.android.support:cardview-v7:$supportLibVersion"
     compile "com.android.support:design:$supportLibVersion"
